# ProcMon-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
procmon_mcp/: __init__.py  __main__.py  server.py
procmon_mcp/core/: __init__.py  etw.py  eventlog.py  network.py  pe_analysis.py  processes.py  services.py  system.py
procmon_mcp/presets/: __init__.py  defender.py
procmon_mcp/utils/: __init__.py  elevation.py  parsing.py  powershell.py
tests/: conftest.py  test_elevation.py  test_parsing.py  test_pe_analysis.py  test_server.py
